2011-07-19  Rob Buis  <rbuis@rim.com>

        https://bugs.webkit.org/show_bug.cgi?id=64673
        REGRESSION (Safari 5.0.5 - ToT): crash in SVG test http://dev.w3.org/SVG/profiles/1.1F2/test/harness/htmlObjectApproved/styling-pres-02-f.html

        Reviewed by Nikolas Zimmermann.

        * platform/mac/svg/W3C-SVG-1.1-SE/styling-pres-02-f-expected.png: Added.
        * platform/mac/svg/W3C-SVG-1.1-SE/styling-pres-02-f-expected.txt: Added.
        * svg/W3C-SVG-1.1-SE/styling-pres-02-f.svg: Added.

2011-07-19  Chris Fleizach  <cfleizach@apple.com>

        If the control associated with a <label> is hidden, the label is also hidden (incorrectly)
        https://bugs.webkit.org/show_bug.cgi?id=64752

        Reviewed by Darin Adler.

        * platform/mac/accessibility/label-element-with-hidden-control-expected.txt: Added.
        * platform/mac/accessibility/label-element-with-hidden-control.html: Added.

2011-07-19  Ryosuke Niwa  <rniwa@webkit.org>

        Remove failing Chromium test expectations after r91224.

        * platform/chromium/test_expectations.txt:

2011-07-19  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Backend should provide network resource identifiers that are unique across navigation.
        https://bugs.webkit.org/show_bug.cgi?id=64746

        Reviewed by Pavel Feldman.

        * inspector/timeline/timeline-network-resource-expected.txt:
        * platform/chromium/inspector/timeline/timeline-network-resource-expected.txt:

2011-07-19  Jeremy Moskovich  <jeremy@chromium.org>

        [chromium] rebaseline Chromium results after r91249 .
        Unreviewed.

        * platform/chromium-linux/fast/speech/speech-bidi-rendering-expected.png: Added.
        * platform/chromium-win/fast/speech/input-text-speechbutton-expected.txt: Added.
        * platform/chromium-win/fast/speech/speech-bidi-rendering-expected.png: Added.
        * platform/chromium-win/fast/speech/speech-bidi-rendering-expected.txt: Added.